Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-22783

Crash in QSGDefaultDistanceFieldGlyphCache::resizeTexture

    XMLWordPrintable

Details

    • 2fa65a8697f36950bcd1b52398ece0ae328ff76d

    Description

      The crash happened under CI in the same place in the tst_qquickgridview::moved test on both attempted runs but I can't reproduce locally so it may be related to the setup of the particular machine the test was run on.

      Full test logs are at http://pulse.test.qt.nokia.com:8080/browse/projects/QtDeclarative%20master%20Integration/builds/904/logs/stage/linux-g%2B%2B-32%20developer-build%20Ubuntu%2010.04%20x86/raw/true/

      The following warnings are printed repeatedly

      11/17/11 12:27:33 PM EST: QWARN  : tst_QQuickGridView::moved(move multiple backwards, from non-visible -> visible (move last item)) QSGRenderer: attribute 0 is enabled, this can lead to memory corruption and crashes.
      11/17/11 12:27:33 PM EST: QWARN  : tst_QQuickGridView::moved(move multiple backwards, from non-visible -> visible (move last item)) QSGRenderer: attribute 1 is enabled, this can lead to memory corruption and crashes.
      11/17/11 12:27:33 PM EST: QWARN  : tst_QQuickGridView::moved(move multiple backwards, from non-visible -> visible (move last item)) QSGRenderer: attribute 2 is enabled, this can lead to memory corruption and crashes.
      11/17/11 12:27:33 PM EST: QWARN  : tst_QQuickGridView::moved(move multiple backwards, from non-visible -> visible (move last item)) QSGRenderer: attribute 3 is enabled, this can lead to memory corruption and crashes.
      11/17/11 12:27:33 PM EST: QWARN  : tst_QQuickGridView::moved(move multiple backwards, from non-visible -> visible (move last item)) QSGRenderer: attribute 4 is enabled, this can lead to memory corruption and crashes.
      11/17/11 12:27:33 PM EST: QWARN  : tst_QQuickGridView::moved(move multiple backwards, from non-visible -> visible (move last item)) QSGRenderer: attribute 5 is enabled, this can lead to memory corruption and crashes.
      11/17/11 12:27:33 PM EST: QWARN  : tst_QQuickGridView::moved(move multiple backwards, from non-visible -> visible (move last item)) QSGRenderer: attribute 6 is enabled, this can lead to memory corruption and crashes.
      11/17/11 12:27:33 PM EST: QWARN  : tst_QQuickGridView::moved(move multiple backwards, from non-visible -> visible (move last item)) QSGRenderer: attribute 7 is enabled, this can lead to memory corruption and crashes.
      11/17/11 12:27:33 PM EST: QWARN  : tst_QQuickGridView::moved(move multiple backwards, from non-visible -> visible (move last item)) QSGRenderer: attribute 8 is enabled, this can lead to memory corruption and crashes.
      11/17/11 12:27:33 PM EST: QWARN  : tst_QQuickGridView::moved(move multiple backwards, from non-visible -> visible (move last item)) QSGRenderer: attribute 9 is enabled, this can lead to memory corruption and crashes.
      11/17/11 12:27:33 PM EST: QWARN  : tst_QQuickGridView::moved(move multiple backwards, from non-visible -> visible (move last item)) QSGRenderer: attribute 10 is enabled, this can lead to memory corruption and crashes.
      11/17/11 12:27:33 PM EST: QWARN  : tst_QQuickGridView::moved(move multiple backwards, from non-visible -> visible (move last item)) QSGRenderer: attribute 11 is enabled, this can lead to memory corruption and crashes.
      11/17/11 12:27:34 PM EST: QWARN  : tst_QQuickGridView::moved(move multiple backwards, from non-visible -> visible (move last item)) QSGRenderer: attribute 12 is enabled, this can lead to memory corruption and crashes.
      11/17/11 12:27:34 PM EST: QWARN  : tst_QQuickGridView::moved(move multiple backwards, from non-visible -> visible (move last item)) QSGRenderer: attribute 13 is enabled, this can lead to memory corruption and crashes.
      11/17/11 12:27:34 PM EST: QWARN  : tst_QQuickGridView::moved(move multiple backwards, from non-visible -> visible (move last item)) QSGRenderer: attribute 14 is enabled, this can lead to memory corruption and crashes.
      11/17/11 12:27:34 PM EST: QWARN  : tst_QQuickGridView::moved(move multiple backwards, from non-visible -> visible (move last item)) QSGRenderer: attribute 15 is enabled, this can lead to memory corruption and crashes.
      

      Before crashing with

      11/17/11 12:27:40 PM EST: QtQA::App::TestRunner: Thread 1 (Thread 5464):
      11/17/11 12:27:40 PM EST: QtQA::App::TestRunner: #0  0x4001d430 in __kernel_vsyscall ()
      11/17/11 12:27:40 PM EST: QtQA::App::TestRunner: #1  0x426e8651 in *__GI_raise (sig=6)
      11/17/11 12:27:40 PM EST: QtQA::App::TestRunner:     at ../nptl/sysdeps/unix/sysv/linux/raise.c:64
      11/17/11 12:27:40 PM EST: QtQA::App::TestRunner: #2  0x426eba82 in *__GI_abort () at abort.c:92
      11/17/11 12:27:40 PM EST: QtQA::App::TestRunner: #3  0x421732a9 in qt_message_output (msgType=QtFatalMsg, 
      11/17/11 12:27:40 PM EST: QtQA::App::TestRunner:     buf=0xa165ac8 "Received signal 11") at global/qglobal.cpp:2111
      11/17/11 12:27:40 PM EST: QtQA::App::TestRunner: #4  0x421734a2 in qt_message (msgType=QtFatalMsg, 
      11/17/11 12:27:40 PM EST: QtQA::App::TestRunner:     msg=0x4003e840 "Received signal %d", ap=0xbf7ff034 "\v")
      11/17/11 12:27:40 PM EST: QtQA::App::TestRunner:     at global/qglobal.cpp:2157
      11/17/11 12:27:40 PM EST: QtQA::App::TestRunner: #5  0x4217380b in qFatal (msg=0x4003e840 "Received signal %d")
      11/17/11 12:27:40 PM EST: QtQA::App::TestRunner:     at global/qglobal.cpp:2335
      11/17/11 12:27:40 PM EST: QtQA::App::TestRunner: #6  0x4002ab15 in QTest::FatalSignalHandler::signal (signum=11)
      11/17/11 12:27:40 PM EST: QtQA::App::TestRunner:     at qtestcase.cpp:1781
      11/17/11 12:27:40 PM EST: QtQA::App::TestRunner: #7  <signal handler called>
      11/17/11 12:27:40 PM EST: QtQA::App::TestRunner: #8  0x00000003 in ?? ()
      11/17/11 12:27:40 PM EST: QtQA::App::TestRunner: #9  0x41fab5d5 in QOpenGLFunctions::glEnableVertexAttribArray (
      11/17/11 12:27:40 PM EST: QtQA::App::TestRunner:     this=0x9d8ad88, index=0) at opengl/qopenglfunctions.h:734
      11/17/11 12:27:40 PM EST: QtQA::App::TestRunner: #10 0x41fa8175 in QOpenGLShaderProgram::enableAttributeArray (this=0x9d63470, 
      11/17/11 12:27:40 PM EST: QtQA::App::TestRunner:     location=0) at opengl/qopenglshaderprogram.cpp:1643
      11/17/11 12:27:40 PM EST: QtQA::App::TestRunner: #11 0x40c5bea5 in QSGDefaultDistanceFieldGlyphCache::resizeTexture (
      11/17/11 12:27:40 PM EST: QtQA::App::TestRunner:     this=0xa19c958, width=4096, height=384)
      11/17/11 12:27:40 PM EST: QtQA::App::TestRunner:     at scenegraph/qsgdefaultdistancefieldglyphcache.cpp:339
      11/17/11 12:27:40 PM EST: QtQA::App::TestRunner: #12 0x40c5b310 in QSGDefaultDistanceFieldGlyphCache::storeGlyphs (
      11/17/11 12:27:40 PM EST: QtQA::App::TestRunner:     this=0xa19c958, glyphs=...)
      11/17/11 12:27:40 PM EST: QtQA::App::TestRunner:     at scenegraph/qsgdefaultdistancefieldglyphcache.cpp:199
      11/17/11 12:27:40 PM EST: QtQA::App::TestRunner: #13 0x40c4fa37 in QSGDistanceFieldGlyphCache::update (this=0xa19c958)
      11/17/11 12:27:40 PM EST: QtQA::App::TestRunner:     at scenegraph/qsgadaptationlayer.cpp:228
      11/17/11 12:27:40 PM EST: QtQA::App::TestRunner: #14 0x40c60fd8 in QSGDistanceFieldTextMaterial::updateCache (this=0xa1d4a88)
      11/17/11 12:27:40 PM EST: QtQA::App::TestRunner:     at scenegraph/qsgdistancefieldglyphnode_p.cpp:212
      11/17/11 12:27:40 PM EST: QtQA::App::TestRunner: #15 0x40c608f0 in QSGDistanceFieldTextMaterialShader::updateState (
      11/17/11 12:27:40 PM EST: QtQA::App::TestRunner:     this=0x9da82e8, state=..., newEffect=0xa1d4a88, oldEffect=0x0)
      11/17/11 12:27:40 PM EST: QtQA::App::TestRunner:     at scenegraph/qsgdistancefieldglyphnode_p.cpp:141
      11/17/11 12:27:40 PM EST: QtQA::App::TestRunner: #16 0x40c622ac in QSGHiQSubPixelDistanceFieldTextMaterialShader::updateState (
      11/17/11 12:27:40 PM EST: QtQA::App::TestRunner:     this=0x9da82e8, state=..., newEffect=0xa1d4a88, oldEffect=0x0)
      11/17/11 12:27:40 PM EST: QtQA::App::TestRunner:     at scenegraph/qsgdistancefieldglyphnode_p.cpp:649
      11/17/11 12:27:40 PM EST: QtQA::App::TestRunner: #17 0x40c2e92a in QSGDefaultRenderer::renderNodes (this=0xa22ac70, list=...)
      11/17/11 12:27:40 PM EST: QtQA::App::TestRunner:     at scenegraph/coreapi/qsgdefaultrenderer.cpp:508
      11/17/11 12:27:40 PM EST: QtQA::App::TestRunner: #18 0x40c2d863 in QSGDefaultRenderer::render (this=0xa22ac70)
      11/17/11 12:27:40 PM EST: QtQA::App::TestRunner:     at scenegraph/coreapi/qsgdefaultrenderer.cpp:309
      11/17/11 12:27:40 PM EST: QtQA::App::TestRunner: #19 0x40c37dd4 in QSGRenderer::renderScene (this=0xa22ac70, bindable=...)
      11/17/11 12:27:40 PM EST: QtQA::App::TestRunner:     at scenegraph/coreapi/qsgrenderer.cpp:258
      11/17/11 12:27:40 PM EST: QtQA::App::TestRunner: #20 0x40c37c89 in QSGRenderer::renderScene (this=0xa22ac70)
      11/17/11 12:27:40 PM EST: QtQA::App::TestRunner:     at scenegraph/coreapi/qsgrenderer.cpp:216
      11/17/11 12:27:40 PM EST: QtQA::App::TestRunner: #21 0x40c54fd8 in QSGContext::renderNextFrame (this=0xa0ef3d8, fbo=0x0)
      11/17/11 12:27:40 PM EST: QtQA::App::TestRunner:     at scenegraph/qsgcontext.cpp:269
      11/17/11 12:27:40 PM EST: QtQA::App::TestRunner: #22 0x40c8ed18 in QQuickCanvasPrivate::renderSceneGraph (this=0xa22e2e8, 
      11/17/11 12:27:40 PM EST: QtQA::App::TestRunner:     size=...) at items/qquickcanvas.cpp:443
      11/17/11 12:27:40 PM EST: QtQA::App::TestRunner: #23 0x40c97cdf in QQuickCanvasRenderLoop::renderSceneGraph (this=0xa0c4398, 
      11/17/11 12:27:40 PM EST: QtQA::App::TestRunner:     size=...) at items/qquickcanvas_p.h:212
      11/17/11 12:27:40 PM EST: QtQA::App::TestRunner: #24 0x40c9873c in QQuickCanvasPlainRenderLoop::paint (this=0xa0c4390)
      11/17/11 12:27:40 PM EST: QtQA::App::TestRunner:     at items/qquickcanvas.cpp:145
      11/17/11 12:27:40 PM EST: QtQA::App::TestRunner: #25 0x40c8e630 in QQuickCanvas::exposeEvent (this=0x9d830c8)
      11/17/11 12:27:40 PM EST: QtQA::App::TestRunner:     at items/qquickcanvas.cpp:305
      11/17/11 12:27:40 PM EST: QtQA::App::TestRunner: #26 0x41cf518f in QWindow::event (this=0x9d830c8, event=0xbf8002ac)
      11/17/11 12:27:40 PM EST: QtQA::App::TestRunner:     at kernel/qwindow.cpp:795
      11/17/11 12:27:40 PM EST: QtQA::App::TestRunner: #27 0x40c917e1 in QQuickCanvas::event (this=0x9d830c8, e=0xbf8002ac)
      11/17/11 12:27:40 PM EST: QtQA::App::TestRunner:     at items/qquickcanvas.cpp:965
      11/17/11 12:27:40 PM EST: QtQA::App::TestRunner: #28 0x422aecb9 in QCoreApplicationPrivate::notify_helper (this=0x90380e8, 
      11/17/11 12:27:40 PM EST: QtQA::App::TestRunner:     receiver=0x9d830c8, event=0xbf8002ac) at kernel/qcoreapplication.cpp:957
      11/17/11 12:27:40 PM EST: QtQA::App::TestRunner: #29 0x422aea72 in QCoreApplication::notify (this=0xbf801258, 
      11/17/11 12:27:40 PM EST: QtQA::App::TestRunner:     receiver=0x9d830c8, event=0xbf8002ac) at kernel/qcoreapplication.cpp:903
      11/17/11 12:27:40 PM EST: QtQA::App::TestRunner: #30 0x41cebf6f in QGuiApplication::notify (this=0xbf801258, object=0x9d830c8, 
      11/17/11 12:27:40 PM EST: QtQA::App::TestRunner:     event=0xbf8002ac) at kernel/qguiapplication.cpp:515
      11/17/11 12:27:40 PM EST: QtQA::App::TestRunner: #31 0x422ae9a8 in QCoreApplication::notifyInternal (this=0xbf801258, 
      11/17/11 12:27:40 PM EST: QtQA::App::TestRunner:     receiver=0x9d830c8, event=0xbf8002ac) at kernel/qcoreapplication.cpp:832
      11/17/11 12:27:40 PM EST: QtQA::App::TestRunner: #32 0x4021f11f in QCoreApplication::sendSpontaneousEvent (receiver=0x9d830c8, 
      11/17/11 12:27:40 PM EST: QtQA::App::TestRunner:     event=0xbf8002ac)
      11/17/11 12:27:40 PM EST: QtQA::App::TestRunner:     at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:211
      11/17/11 12:27:40 PM EST: QtQA::App::TestRunner: #33 0x41cee60c in QGuiApplicationPrivate::processExposeEvent (e=0xa4b8ef8)
      11/17/11 12:27:40 PM EST: QtQA::App::TestRunner:     at kernel/qguiapplication.cpp:1012
      11/17/11 12:27:40 PM EST: QtQA::App::TestRunner: #34 0x41cec12f in QGuiApplicationPrivate::processWindowSystemEvent (
      11/17/11 12:27:40 PM EST: QtQA::App::TestRunner:     e=0xa4b8ef8) at kernel/qguiapplication.cpp:584
      11/17/11 12:27:40 PM EST: QtQA::App::TestRunner: #35 0x41cdbdd6 in QWindowSystemInterface::handleSynchronousExposeEvent (
      11/17/11 12:27:40 PM EST: QtQA::App::TestRunner:     tlw=0x9d830c8, region=...) at kernel/qwindowsysteminterface_qpa.cpp:288
      11/17/11 12:27:40 PM EST: QtQA::App::TestRunner: #36 0x43fa0c6e in QXcbWindow::handleExposeEvent (this=0xa1c34a0, 
      11/17/11 12:27:40 PM EST: QtQA::App::TestRunner:     event=0xa231728) at qxcbwindow.cpp:1183
      11/17/11 12:27:40 PM EST: QtQA::App::TestRunner: #37 0x43f8a9ba in QXcbConnection::handleXcbEvent (this=0x904bac0, 
      11/17/11 12:27:40 PM EST: QtQA::App::TestRunner:     event=0xa231728) at qxcbconnection.cpp:491
      11/17/11 12:27:40 PM EST: QtQA::App::TestRunner: #38 0x43f8b46c in QXcbConnection::processXcbEvents (this=0x904bac0)
      11/17/11 12:27:40 PM EST: QtQA::App::TestRunner:     at qxcbconnection.cpp:667
      11/17/11 12:27:40 PM EST: QtQA::App::TestRunner: #39 0x43fa9db8 in QXcbConnection::qt_static_metacall (_o=0x904bac0, 
      11/17/11 12:27:40 PM EST: QtQA::App::TestRunner:     _c=QMetaObject::InvokeMetaMethod, _id=0, _a=0xbf800618)
      11/17/11 12:27:40 PM EST: QtQA::App::TestRunner:     at .moc/debug-shared/moc_qxcbconnection.cpp:138
      11/17/11 12:27:40 PM EST: QtQA::App::TestRunner: #40 0x422d6011 in QMetaObject::activate (sender=0x9043510, m=0x424e6e0c, 
      11/17/11 12:27:40 PM EST: QtQA::App::TestRunner:     local_signal_index=1, argv=0x0) at kernel/qobject.cpp:3391
      11/17/11 12:27:40 PM EST: QtQA::App::TestRunner: #41 0x42349567 in QAbstractEventDispatcher::awake (this=0x9043510)
      11/17/11 12:27:40 PM EST: QtQA::App::TestRunner:     at .moc/debug-shared/moc_qabstracteventdispatcher.cpp:122
      11/17/11 12:27:40 PM EST: QtQA::App::TestRunner: #42 0x422fbc76 in QEventDispatcherGlib::processEvents (this=0x9043510, 
      11/17/11 12:27:40 PM EST: QtQA::App::TestRunner:     flags=...) at kernel/qeventdispatcher_glib.cpp:413
      11/17/11 12:27:40 PM EST: QtQA::App::TestRunner: #43 0x422aed91 in QCoreApplication::processEvents (flags=...)
      11/17/11 12:27:40 PM EST: QtQA::App::TestRunner:     at kernel/qcoreapplication.cpp:1014
      11/17/11 12:27:40 PM EST: QtQA::App::TestRunner: #44 0x0805e840 in tst_QQuickGridView::moved (this=0xbf801250)
      11/17/11 12:27:40 PM EST: QtQA::App::TestRunner:     at tst_qquickgridview.cpp:891
      11/17/11 12:27:40 PM EST: QtQA::App::TestRunner: #45 0x0808ce63 in tst_QQuickGridView::qt_static_metacall (_o=0xbf801250, 
      11/17/11 12:27:40 PM EST: QtQA::App::TestRunner:     _c=QMetaObject::InvokeMetaMethod, _id=11, _a=0xbf800930)
      11/17/11 12:27:40 PM EST: QtQA::App::TestRunner:     at .moc/debug-shared/tst_qquickgridview.moc:131
      11/17/11 12:27:40 PM EST: QtQA::App::TestRunner: #46 0x422b90c0 in QMetaMethod::invoke (this=0xbf800a9c, object=0xbf801250, 
      11/17/11 12:27:40 PM EST: QtQA::App::TestRunner:     connectionType=Qt::DirectConnection, returnValue=..., val0=..., val1=..., 
      11/17/11 12:27:40 PM EST: QtQA::App::TestRunner:     val2=..., val3=..., val4=..., val5=..., val6=..., val7=..., val8=..., 
      11/17/11 12:27:40 PM EST: QtQA::App::TestRunner:     val9=...) at kernel/qmetaobject.cpp:1650
      11/17/11 12:27:40 PM EST: QtQA::App::TestRunner: #47 0x422b84e2 in QMetaObject::invokeMethod (obj=0xbf801250, 
      11/17/11 12:27:40 PM EST: QtQA::App::TestRunner:     member=0x9567df8 "moved", type=Qt::DirectConnection, ret=..., val0=..., 
      11/17/11 12:27:40 PM EST: QtQA::App::TestRunner:     val1=..., val2=..., val3=..., val4=..., val5=..., val6=..., val7=..., 
      11/17/11 12:27:40 PM EST: QtQA::App::TestRunner:     val8=..., val9=...) at kernel/qmetaobject.cpp:1192
      11/17/11 12:27:40 PM EST: QtQA::App::TestRunner: #48 0x4002c794 in QMetaObject::invokeMethod (obj=0xbf801250, 
      11/17/11 12:27:40 PM EST: QtQA::App::TestRunner:     member=0x9567df8 "moved", type=Qt::DirectConnection, val0=..., val1=..., 
      11/17/11 12:27:40 PM EST: QtQA::App::TestRunner:     val2=..., val3=..., val4=..., val5=..., val6=..., val7=..., val8=..., 
      11/17/11 12:27:40 PM EST: QtQA::App::TestRunner:     val9=...)
      11/17/11 12:27:40 PM EST: QtQA::App::TestRunner:     at ../../include/QtCore/../../src/corelib/kernel/qobjectdefs.h:406
      11/17/11 12:27:40 PM EST: QtQA::App::TestRunner: #49 0x40029caa in qInvokeTestMethodDataEntry (slot=0x9567df8 "moved")
      11/17/11 12:27:40 PM EST: QtQA::App::TestRunner:     at qtestcase.cpp:1493
      11/17/11 12:27:40 PM EST: QtQA::App::TestRunner: #50 0x4002a2b2 in qInvokeTestMethod (slotName=0x80999a4 "moved()", data=0x0)
      11/17/11 12:27:40 PM EST: QtQA::App::TestRunner:     at qtestcase.cpp:1594
      11/17/11 12:27:40 PM EST: QtQA::App::TestRunner: #51 0x4002aa63 in qInvokeTestMethods (testObject=0xbf801250)
      11/17/11 12:27:40 PM EST: QtQA::App::TestRunner:     at qtestcase.cpp:1748
      11/17/11 12:27:40 PM EST: QtQA::App::TestRunner: #52 0x4002b187 in QTest::qExec (testObject=0xbf801250, argc=5, 
      11/17/11 12:27:40 PM EST: QtQA::App::TestRunner:     argv=0xbf801324) at qtestcase.cpp:1956
      11/17/11 12:27:40 PM EST: QtQA::App::TestRunner: #53 0x0808cce7 in main (argc=5, argv=0xbf801324)
      11/17/11 12:27:40 PM EST: QtQA::App::TestRunner:     at tst_qquickgridview.cpp:3442
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            ylopes Yoann Lopes
            denexter Andrew den Exter (closed Nokia identity) (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes