Fixes crash in QSGDefaultDistanceFieldGlyphCache::resizeTexture()

The blit shader was not valid anymore after deleting and recreating a
QQuickCanvas.

Task-number: QTBUG-22783
Change-Id: Id13578006b89859b862685b3a695eb8b59a48c56
Reviewed-by: Kent Hansen <kent.hansen@nokia.com>